# pysad

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  LICENSE  README.rst  README_template.rst  _build_readme.py  appveyor.yml  azure-pipelines.yml  build_docs.sh  deploy.sh  lint.sh  pyproject.toml  release-please-config.json  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_deprecation_fix.py
.circleci/: config.yml
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
docs/: api.rst  badges.rst  cheatsheet.rst  citing.rst  conf.py  contributing.rst  examples.rst  faq.rst  features.rst  inclusion_criteria.rst  index.rst  installation.rst  license.rst  modules.rst  pysad.core.rst  pysad.ensemble.rst  pysad.evaluation.rst  pysad.models.integrations.rst  pysad.models.kitnet_model.rst  pysad.models.rst  pysad.postprocessing.rst  pysad.preprocessing.rst  pysad.projection.rst  pysad.rst  pysad.statistics.rst  pysad.stats.rst  pysad.streaming.rst  pysad.transform.ensemble.rst  pysad.transform.postprocessing.rst  pysad.transform.preprocessing.rst  pysad.transform.probability_calibration.rst  pysad.transform.projection.rst  pysad.transform.rst  pysad.utils.rst  quick_links.rst  references.rst  refs.bib  useful_links.rst  versioning.rst
ensemble/: base_ensembler.py  ensemblers.py
evaluation/: aupr_metric.py  auroc.py  auroc_metric.py  base_evaluator.py  base_metric.py  base_sklearn_metric.py  metrics.py  precision_metric.py  recall_metric.py  windowed_evaluator.py  windowed_metric.py
examples/: example_ensemble.py  example_probability_calibration.py  example_pyod_integration.py  example_statistics.py  example_usage.py  example_usage_inqmad.py  example_usage_short.py  integration_pyod.py
models/: base_model.py  exact_storm.py  half_space_trees.py  iforest_asd.py  kitnet.py  loda.py  loop.py  online_gru.py  online_lstm.py  online_rnn.py  pyod_model.py  reference_window_model.py  relative_entropy.py  robust_random_cut_forest.py  rs_hash.py  semisupervised_model.py  supervised_model.py  (+2 more)
(+174 files in other folders)
